--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,15 @@
 {
     "name": "magenxcommerce/module-sitemap",
     "description": "N/A",
+    "type": "magento2-module",
+    "license": [
+        "OSL-3.0",
+        "AFL-3.0"
+    ],
     "config": {
         "sort-packages": true
     },
+    "version": "100.3.6",
     "require": {
         "php": "~7.1.3||~7.2.0||~7.3.0",
         "magento/framework": "102.0.*",
@@ -20,11 +26,6 @@
     "suggest": {
         "magento/module-config": "101.1.*"
     },
-    "type": "magento2-module",
-    "license": [
-        "OSL-3.0",
-        "AFL-3.0"
-    ],
     "autoload": {
         "files": [
             "registration.php"
@@ -32,6 +33,5 @@
         "psr-4": {
             "Magento\\Sitemap\\": ""
         }
-    },
-    "version": "100.3.5"
+    }
 }
